--- a/task_2.html
+++ b/task_2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="task_2.css">
 </head>
 <body>
     <div class="stopwatch">
@@ -17,6 +17,6 @@
         </div>
         <ul class="laps"></ul>
     </div>
-    <script src="scripts.js"></script>
+    <script src="task_2.js"></script>
 </body>
 </html>
